--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,7 +7,7 @@
 <link rel="manifest" href="site.webmanifest?">
 <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-<meta name="msapplication-config" content="https://cdn.jsdelivr.net/gh/retrotink-llc/firmwares@7c8b834/browserconfig.xml">
+<meta name="msapplication-config" content="https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/browserconfig.xml">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
