--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           <h1>{{ site.link-title | markdownify }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{ https://www.retrotink.com/ }}">{{ site.github.owner_name }}</a></span>
+          <span class="credits left">Project maintained by <a href="https://www.retrotink.com/">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
         </div>
 
