Magic 3: This time, it should work

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -11,4 +11,14 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QSQJ2QCY6L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QSQJ2QCY6L');
+</script>
+
 <!-- end custom head snippets -->
