--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 		<div id="title">
 		  <br/>
 		  <hr>
-		  <span class="credits left">Project maintained by <a href="https://www.retrotink.com/">RetroTINK LLC</a></span>
+		  <span class="credits left">Site maintained by <a href="https://www.retrotink.com/">RetroTINK LLC</a></span>
 		  <span class="credits right">Hosted on GitHub Pages — Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
 		</div>
 
