--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     <!--[if lt IE 8]>
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
+	<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=yes">
     {% include head-custom.html %}
   </head>
   <body>
