--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 		  <br/>
 		  <hr>
 		  <span class="credits left">Site maintained by <a href="https://www.retrotink.com/">RetroTINK LLC</a></span>
-		  <span class="credits right">Hosted on GitHub Pages — Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+		  <span class="credits right">Theme based on <a href="https://github.com/pages-themes/midnight">Midnight</a> by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
 		</div>
 
       </section>
