Credit myself on website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 		<div id="title">
 		  <br/>
 		  <hr>
-		  <span class="credits left">Site maintained by <a href="https://www.retrotink.com/">RetroTINK LLC</a></span>
+		  <span class="credits left">Site maintained by <a href="https://twitter.com/SquidHominid/">SquidHominid</a> for <a href="https://www.retrotink.com/">RetroTINK LLC</a></span>
 		  <span class="credits right">Theme based on <a href="https://github.com/pages-themes/midnight">Midnight</a> by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
 		</div>
 
