--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,14 +1,14 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- You can set your favicon here -->
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?">
-<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?">
-<link rel="manifest" href="site.webmanifest?">
-<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-<meta name="msapplication-config" content="https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/browserconfig.xml">
+<link rel="apple-touch-icon" sizes="180x180" href="/firmware/assets/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/firmware/assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/firmware/assets/favicon-16x16.png">
+<link rel="manifest" href="/firmware/assets/site.webmanifest">
+<link rel="mask-icon" href="/firmware/assets/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/firmware/assets/favicon.ico">
 <meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/firmware/assets/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
 <!-- Google tag (gtag.js) -->
