--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,13 +1,26 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <!-- You can set your favicon here -->
-<link rel="apple-touch-icon" sizes="180x180" href="/firmware/assets/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="57x57" href="/firmware/assets/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/firmware/assets/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/firmware/assets/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/firmware/assets/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/firmware/assets/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/firmware/assets/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/firmware/assets/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/firmware/assets/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/firmware/assets/apple-touch-icon-180x180.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/firmware/assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="194x194" href="/firmware/assets/favicon-194x194.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/firmware/assets/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/firmware/assets/favicon-16x16.png">
 <link rel="manifest" href="/firmware/assets/site.webmanifest">
 <link rel="mask-icon" href="/firmware/assets/safari-pinned-tab.svg" color="#5bbad5">
 <link rel="shortcut icon" href="/firmware/assets/favicon.ico">
+<meta name="apple-mobile-web-app-title" content="RetroTINK Firmware Repository">
+<meta name="application-name" content="RetroTINK Firmware Repository">
 <meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/firmware/assets/mstile-144x144.png">
 <meta name="msapplication-config" content="/firmware/assets/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
